Fixing Purchase Form and Removing Facebook Login

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -72,7 +72,7 @@
     <div id="footer">
 		    <medium>
 	       <font color="#ffffff"> 
-		<p><%= link_to "ABOUT US", "page/about" %> | <%= link_to "BLOG", "http://www.valydation.tumblr.com", :target => "_blank" %> | <a href="/page/privacy">BECOME A SILICON LEGEND</a> | <a href="/page/affiliates">AFFILIATES</a> | <a href="/page/help%20">HELP</a> | <a href="/page/jobs">JOBS</a> | <a href="/page/authenticity">AUTHENTICITY</a> | <a href="/contact">CONTACT US</a></p>
+		<p><%= link_to "ABOUT US", "/page/about" %> | <%= link_to "BLOG", "http://www.valydation.tumblr.com", :target => "_blank" %> | <a href="/page/privacy">BECOME A SILICON LEGEND</a> | <a href="/page/affiliates">AFFILIATES</a> | <a href="/page/help%20">HELP</a> | <a href="/page/jobs">JOBS</a> | <a href="/page/authenticity">AUTHENTICITY</a> | <a href="/contact">CONTACT US</a></p>
 		
 		<p>&copy;<%= link_to "Valydation 2013, All rights reserved.", "http://valydation.com" %><a href="/page/tos"> Terms of Service</a> and <a href="/page/privacy">Privacy Policy</a></p>
 	     </font> </medium>
