--- a/app/views/layouts/prelogin.html.erb
+++ b/app/views/layouts/prelogin.html.erb
@@ -59,7 +59,7 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
               <% unless @no_header_links %>
-              <li><%= link_to "Join", register_url %></li>
+              <li><%= link_to "Join", new_user_url %></li>
               <li><%= link_to "About Us", "/page/about" %></li>
               <li><%= link_to "Login", new_session_url %></li>
               <% end %>
