--- a/app/views/search_results/index.html.erb
+++ b/app/views/search_results/index.html.erb
@@ -7,12 +7,16 @@ body {
 <div class="container">
   <div class="category-feed well">
     <center>
-      <font size="6" color="#432060">Results for '<%= params[:q] %>'</font>
+      <font size="6" color="#432060">Results for '<%= params[:q] if params[:q] %>'</font>
     </center>
   </div>
-</div>
 
-<%= render "sales/sales" %>
+
+<% if @sales.empty? %>
+<h2>Want to see something from this company? Please let us know on the <u><a href="/contact">Contact</a></u> page.</h2><br><br><br><br><br><br><br><br><br><br></div>
+<% else %>
+<%= render "sales" %>
+<% end %>
 
 <center>
   <%= paginate @sales %> 
