Fixing Search Mistake

--- a/app/views/sales/_sale_detail.html.erb
+++ b/app/views/sales/_sale_detail.html.erb
@@ -19,7 +19,7 @@
 		    
 	  </div>
 
-	    <a href="/featured/new-stuff" class="faves-script-detail btn btn-success">
+	    <a href="/featured/tech-connects-us-07-01-2013" class="faves-script-detail btn btn-success">
 	      What's New
 	    </a>
 
