--- a/app/views/sales/index.html.erb
+++ b/app/views/sales/index.html.erb
@@ -50,7 +50,7 @@ function submitFilter() {
       <% end %>&#160;|&#160;<a href="/page/photography">PHOTOGRAPHY</a>&#160;|&#160;<a href="/page/siliconlegends">SILICON LEGENDS</a>
     </span>
 
-    <a href="/featured/new-stuff" class="faves-script btn btn-success">
+    <a href="/featured/tech-connects-us-07-01-2013" class="faves-script btn btn-success">
       What's New
     </a>
 
