--- a/app/views/purchases/_cart.html.erb
+++ b/app/views/purchases/_cart.html.erb
@@ -13,7 +13,7 @@
 			      <% end %>
 			    </span>
 
-			    <a href="/featured/new-stuff" class="faves-script-detail btn btn-success">
+			    <a href="/featured/tech-connects-us-07-01-2013" class="faves-script-detail btn btn-success">
 			      What's New
 			    </a>
 
