--- a/app/views/sales/group.html.erb
+++ b/app/views/sales/group.html.erb
@@ -17,7 +17,7 @@ body {
       <% end %>&#160;|&#160;<a href="/page/photography">PHOTOGRAPHY</a>&#160;|&#160;<a href="/page/siliconlegends">SILICON LEGENDS</a>
     </span>
 
-    <a href="/featured/new-stuff" class="faves-script btn btn-success">
+    <a href="/featured/tech-connects-us-07-01-2013" class="faves-script btn btn-success">
       What's New
     </a>
 		
