--- a/app/views/layouts/prelogin.html.erb
+++ b/app/views/layouts/prelogin.html.erb
@@ -59,6 +59,7 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
               <% unless @no_header_links %>
+							<li><a href="http://valydation.tumblr.com/" target="blank" >Blog</a></li>
               <li><%= link_to "About Us", "/page/about" %></li>
               <li><%= link_to "Account", new_session_url %></li>
               <% end %>
@@ -75,7 +76,7 @@
 		<div id="footer">
 		    <medium>
 	       <font color="#ffffff"> 
-		
+		<p style="margin-top:-18px;">Join our email list</p>
 		<p>			<%= form_tag(register_lead_url,
 												                 {:class => "form-search"}) do %>
 																				<% if @error_message %>
@@ -84,7 +85,7 @@
 																		    </div>
 																		    <% end %>
 											<input type="text" value="<%= params[:email] %>" id="email" name="email" class="input-block-level" placeholder="ENTER EMAIL"><button class="btn btn-small email-sign" type="submit" onclick="alert(document.getElementById('HiddenHear').innerHTML);">Submit</button>
-												<% end %><div id="HiddenHear" style="display:none">You're on the email list!</div>&copy;<%= link_to "Valydation 2013, All rights reserved.", "http://valydation.com" %> <u><a href="/page/tos">Terms of Service</a></u> and <u><a href="/page/privacy">Privacy Policy</a></u>			
+												<% end %><div id="HiddenHear" style="display:none">You're on the email list!</div></p><p style="margin-top:46px;">&copy;<%= link_to "Valydation 2013, All rights reserved.", "http://valydation.com" %> <u><a href="/page/tos">Terms of Service</a></u> and <u><a href="/page/privacy">Privacy Policy</a></u>			
 		</p>
 	     </font> </medium>
 	    </div>
