--- a/app/views/search_results/index.html.erb
+++ b/app/views/search_results/index.html.erb
@@ -6,7 +6,7 @@ body {
 
 <div class="container">
   <div class="category-feed well">
-   <div class="back-button ">
+   <div class="search-results-left">
       Results for '<%= params[:q] %>'
   </div>
 	 <span class="category-feed-align">
