--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content=""> 
-   
+   <meta name="p:domain_verify" content="90269a038dd4c1af51dbb09519eaddfc"/>
     <%= javascript_include_tag 'application' %>
 
     <%= stylesheet_link_tag 'application' %>
