--- a/app/assets/stylesheets/jess.css
+++ b/app/assets/stylesheets/jess.css
@@ -1288,11 +1288,18 @@ width: 44px;
 }
 
 .email-sign {
+position: absolute;
+margin-left: 86px;
+margin-top: -14px !important;
+padding: 3px;
+}
+
+# mce-responses {	 
 	position: absolute;
-	margin-left: 10px;
-	margin-top: 11px !important;
-	padding: 3px;
-	}
+	left: 127px;
+	top: 993px;
+	
+}
 
 #footer .form-search {
 	margin-top: -25px !important;
