--- a/app/views/sales/index.html.erb
+++ b/app/views/sales/index.html.erb
@@ -75,11 +75,14 @@ function submitFilter() {
 		
 
   </div>
-<% if @sales.empty? %>
+<!-- <% if @sales.empty? %>
 <h2>Want to see something from this company? Please let us know on the <u><a href="/contact">Contact</a></u> page.</h2></div>
-<% else %>
+<% else %> -->
 <%= render "sales" %>
-<% end %>
+<!-- <% end %> -->
+<center>
+      <%= paginate @sales %> 
+    </center>
 
 
 
