Apparel to T-Shirts

--- a/app/views/sales/_sale_detail.html.erb
+++ b/app/views/sales/_sale_detail.html.erb
@@ -7,7 +7,7 @@
 	   
 			<a href="/sales">Home</a>&#160;/
 		        <% if sale.category_id == 0 %>
-				<a href="/sales">Apparel</a>
+				<a href="/sales">T-Shirts</a>
 						<% else %> 
 						<% if sale.category_id == 1 %>
 						<a href="/sales?category_id=1">Ceramics & Glass</a>
