Sale Image for Purchase View

--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -13,9 +13,9 @@ body {
         <tr>
           <th>Order Number</th>
           <th>Date Purchased</th>
-          <th>
-            Status
-          </th>
+          <!-- <th>
+                      Status
+                    </th> -->
         </tr>
       </thead>
       <tbody>
@@ -29,9 +29,9 @@ body {
         <td>
           <%= purchase.created_at.strftime("%d %b %Y") %>
         </td>
-        <td>
-          <%= purchase.retailer_status %>
-        </td>
+        <!-- <td>
+                 <%= purchase.retailer_status %>
+               </td> -->
       </tr>
     <% end %>
       </tbody>
@@ -48,19 +48,12 @@ body {
         <div class="row-fluid">
           <% if purchase.sale %>
           <div class="span2">
-            <% [:image_0, :image_1, :image_2, :image_3, :image_4, :image_5, :image_6, :image_7].each do |image_sym|
-                if (img = purchase.sale.send(image_sym)) and not img.versions[:web_index].to_s.empty? 
-                  img_version = :web_index
-                %>
-                <img class="img-polaroid" src="<%= img.versions[:web_index] %>" onmouseover="$('#sale_image_<%= purchase.sale.id %>')[0].src='<%= img.versions[img_version] %>'" onclick="$('#sale_image_<%= purchase.sale.id %>')[0].src='<%= img.versions[img_version] %>'" />
-                <br>
-                <%   end
-              end %>
+           
           </div>
           <div class="span6">	
             <span class="time-banner">
               <span class="image-banner">
-                 <img id="sale_image_<%= purchase.sale.id %>" src="<%= purchase.sale.image_0.versions[:web_index] if purchase.sale.image_0 %>" alt="" />
+                 <%= purchase.sale.image_0.versions[:web_index] if purchase.sale.image_0 %>
               </span>
             </span>
             <br>
