--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -53,7 +53,7 @@ body {
           <div class="span6">	
             <span class="time-banner">
               <span class="image-banner">
-                 <%= purchase.sale.image_0.versions[:web_index] if purchase.sale.image_0 %>
+                 <img src="<%= purchase.sale.image_0.versions[:web_index] if purchase.sale.image_0 %>" alt="" />
               </span>
             </span>
             <br>
