--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -49,7 +49,7 @@ body {
           <% if purchase.purchased_sales %>
           <div class="span2">
              <% [:image_0, :image_1, :image_2, :image_3, :image_4, :image_5, :image_6, :image_7].each do |image_sym|
-                            if (img = purchased.purchased_sales.send(image_sym)) and not img.versions[:web_index].to_s.empty? 
+                            if (img = purchase.purchased_sales.send(image_sym)) and not img.versions[:web_index].to_s.empty? 
                               img_version = :web_index
                             %>
                             <img class="img-polaroid" src="<%= img.versions[:web_index] %> />
