--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -13,100 +13,101 @@ body {
         <tr>
           <th>Order Number</th>
           <th>Date Purchased</th>
-          <!-- <th>
-                      Status
-                    </th> -->
+          <th>
+                                Total
+                              </th>
         </tr>
       </thead>
       <tbody>
       <% @purchases.each do |purchase| %>
         <tr>
         <td>
-          <a href="#shippingModal" data-toggle="modal">
+          <!-- <a href="#shippingModal" data-toggle="modal"> -->
             <%= purchase.id %>
-          </a>
+          <!-- </a> -->
         </td>
         <td>
           <%= purchase.created_at.strftime("%d %b %Y") %>
         </td>
-        <!-- <td>
-                 <%= purchase.retailer_status %>
-               </td> -->
+        <td>
+                         <%= humanized_money_with_symbol purchase.total %>
+                       </td>
       </tr>
     <% end %>
       </tbody>
     </table>
 
-    <% @purchases.each do |purchase| %>
-      <!-- modal -->
-    <div id="shippingModal" class="modal hide" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <div class="modal-header">
-        <button type="button" class="close modal-brand" data-dismiss="modal" aria-hidden="true">×</button><br>
-        <p id="myModalLabel"></p>
-      </div>
-      <div class="modal-body">
-        <div class="row-fluid">
-          <% if purchase.purchased_sales %>
-          <div class="span2">
-             <% [:image_0, :image_1, :image_2, :image_3, :image_4, :image_5, :image_6, :image_7].each do |image_sym|
-                            if (img = purchase.purchased_sales.send(image_sym)) and not img.versions[:web_index].to_s.empty? 
-                              img_version = :web_index
-                            %>
-                            <img class="img-polaroid" src="<%= img.versions[:web_index] %> />
-                            <br>
-                            <%   end
-                          end %> 
+    <!-- <% @purchases.each do |purchase| %>
+          <!-- modal -->
+        <div id="shippingModal" class="modal hide" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          <div class="modal-header">
+            <button type="button" class="close modal-brand" data-dismiss="modal" aria-hidden="true">×</button><br>
+            <p id="myModalLabel"></p>
           </div>
-          <div class="span6">	
-            <span class="time-banner">
-              <span class="image-banner">
-                 <img id="sale_image_<%= purchase.sale.id %>" src="<%= purchase.sale.image_0.versions[:web_index] if purchase.sale.image_0 %>" alt="" />
-              </span>
-            </span>
-            <br>
-          </div>
-          <% end %>
-
-          <div class="span4 pull-right">
-            <br>
-            <table class="table table-bordered table-striped">
-              <tr>  
-                <td>
-                  <font size="1" class="muted table-modaltwo">Subtotal</font><%= humanized_money_with_symbol purchase.subtotal %></td>
-              </tr>
-              <tr> 
-                <td>
-                  <font size="1" class="muted table-modaltwo">Tax</font><%= humanized_money_with_symbol purchase.tax %></td>
-              </tr>
-              <% if purchase.shipping.to_f > 0 %>
-              <tr>  
-                <td>
-                  <font size="1" class="muted table-modaltwo">Shipping</font><%= humanized_money_with_symbol purchase.shipping %>
-                </td>
-              </tr>
+          <div class="modal-body">
+            <div class="row-fluid">
+              <% if purchase.purchased_sales %>
+              <div class="span2">
+                 <% [:image_0, :image_1, :image_2, :image_3, :image_4, :image_5, :image_6, :image_7].each do |image_sym|
+                                if (img = purchase.purchased_sales.send(image_sym)) and not img.versions[:web_index].to_s.empty? 
+                                  img_version = :web_index
+                                %>
+                                <img class="img-polaroid" src="<%= img.versions[:web_index] %> />
+                                <br>
+                                <%   end
+                              end %> 
+              </div>
+              <div class="span6">	
+                <span class="time-banner">
+                  <span class="image-banner">
+                     <img id="sale_image_<%= purchase.sale.id %>" src="<%= purchase.sale.image_0.versions[:web_index] if purchase.sale.image_0 %>" alt="" />
+                  </span>
+                </span>
+                <br>
+              </div>
               <% end %>
-              <tr>  
-                <td>
-                  <font size="1" class="muted table-modaltwo">Total</font><%= humanized_money_with_symbol purchase.total %>
-                </td>
-              </tr>
-              <tr>  
-                <td>
-                  <font size="1" class="muted table-modaltwo">Card</font>XXXX XXXX XXXX <%= purchase.card_last_4 %>
-                </td>
-              </tr>
-            </table>
+
+              <div class="span4 pull-right">
+                <br>
+                <table class="table table-bordered table-striped">
+                  <tr>  
+                    <td>
+                      <font size="1" class="muted table-modaltwo">Subtotal</font><%= humanized_money_with_symbol purchase.subtotal %></td>
+                  </tr>
+                  <tr> 
+                    <td>
+                      <font size="1" class="muted table-modaltwo">Tax</font><%= humanized_money_with_symbol purchase.tax %></td>
+                  </tr>
+                  <% if purchase.shipping.to_f > 0 %>
+                  <tr>  
+                    <td>
+                      <font size="1" class="muted table-modaltwo">Shipping</font><%= humanized_money_with_symbol purchase.shipping %>
+                    </td>
+                  </tr>
+                  <% end %>
+                  <tr>  
+                    <td>
+                      <font size="1" class="muted table-modaltwo">Total</font><%= humanized_money_with_symbol purchase.total %>
+                    </td>
+                  </tr>
+                  <tr>  
+                    <td>
+                      <font size="1" class="muted table-modaltwo">Card</font>XXXX XXXX XXXX <%= purchase.card_last_4 %>
+                    </td>
+                  </tr>
+                </table>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button class="btn btn-success" data-dismiss="modal">Ok</button>
           </div>
         </div>
-      </div>
-      <div class="modal-footer">
-        <button class="btn btn-success" data-dismiss="modal">Ok</button>
-      </div>
-    </div>
 
-  <% end %>
-
+      <% end %> -->
+    
     <br><br><br><br><br><br><br><br><br><br>
 
   </div>
 </div>
+ <br><br><br><br><br><br><br><br>
