--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -36,10 +36,10 @@ body {
         </legend>
 
       
-      	<%= link_to "Order Status", purchases_url, :class => "btn btn-success order-status-btn" %><br>
+      	<!-- <%= link_to "Order Status", purchases_url, :class => "btn btn-success order-status-btn" %><br>
 
-     
-        <hr>
+      	     
+      	        <hr> -->
 
 
 
