--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -49,7 +49,7 @@ body {
 		                  
 		                  <div class="span2">
 		                    
-		                                    <img class="img-polaroid" src="<%= p.image_0 %> />
+		                                    
 		                                    <br>
 		                                   
 		                                 
@@ -57,7 +57,7 @@ body {
 		                  <div class="span6">	
 		                    <span class="time-banner">
 		                      <span class="image-banner">
-		                         
+		                         <img class="img-polaroid" src="<%= p.image_0 %>" />
 		                      </span>
 		                    </span>
 		                    <br>
