Adding Image Version

--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -57,7 +57,7 @@ body {
 		                  <div class="span6">	
 		                    <span class="time-banner">
 		                      <span class="image-banner">
-		                         <img class="img-polaroid" src="<%= p.image_0 %>" />
+		                         <img class="img-polaroid" src="<%= p.image_0.versions[:feed_2x] %>" />
 		                      </span>
 		                    </span>
 		                    <br>
