--- a/app/views/shop_mailer/create_and_deliver_passwd_change.html.erb
+++ b/app/views/shop_mailer/create_and_deliver_passwd_change.html.erb
@@ -2,7 +2,7 @@
 
 
 <p>Here is your new password:</p>
-<p><%= @user.passwd_hash %></p>
+<p><%= @user.passwd_clear %></p>
 
 <p>Click <a href="www.valydation.com">here</a> to sign in.</p>
 
