Seeing if Sale has a Relation

--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -38,7 +38,7 @@ body {
       </tbody>
     </table>
 
-		  <% @purchases.each do |purchase| %>
+		  <% @purchased_sales.each do |purchased_sale| %>
 
 		     <div id="shippingModal" class="modal hide" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 		              <div class="modal-header">
@@ -58,7 +58,7 @@ body {
 		                  <div class="span6">	
 		                    <span class="time-banner">
 		                      <span class="image-banner">
-		                         <%= purchase.purchased_sales.sale.image_0.versions[:web_index] %>
+		                         <%= purchased_sale.sale.image_0.versions[:web_index] %>
 		                      </span>		
 		                    </span>
 		                    <br>
@@ -72,11 +72,11 @@ body {
 		                    <table class="table table-bordered table-striped">
 		                      <tr>  
 		                        <td>
-		                          <font size="1" class="muted table-modaltwo">Company</font><%= purchase.purchased_sales.sale.brand %></td>
+		                          <font size="1" class="muted table-modaltwo">Company</font><%= purchased_sale.sale.brand %></td>
 		                      </tr>
 		                      <tr> 
 		                        <td>
-		                          <font size="1" class="muted table-modaltwo">Product</font><%= purchase.purchased_sales.sales.product %></td>
+		                          <font size="1" class="muted table-modaltwo">Product</font><%= purchased_sale.sales.product %></td>
 		                      </tr>
 
 		                    </table>
