--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -58,7 +58,7 @@ body {
 		                  <div class="span6">	
 		                    <span class="time-banner">
 		                      <span class="image-banner">
-		                         <%= purchased_sale.sale.image_0.versions[:web_index] %>
+		                         <img src="<%= purchased_sale.image_0.versions[:web_index] %>">
 		                      </span>		
 		                    </span>
 		                    <br>
