--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -38,57 +38,57 @@ body {
       </tbody>
     </table>
 
-		  <!-- <% @purchased_sales.each do |purchased_sale| %>
+		  <% @purchased_sales.each do |purchased_sale| %>
 
-		  		     <div id="shippingModal" class="modal hide" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-		  		              <div class="modal-header">
-		  		                <button type="button" class="close modal-brand" data-dismiss="modal" aria-hidden="true">×</button><br>
-		  		                <p id="myModalLabel"></p>
-		  		              </div>
-		  		              <div class="modal-body">
-		  		                <div class="row-fluid">
-		  		                  
-		  		                  <div class="span2">
-		  		                    
-		  		                                    
-		  		                                    <br>
-		  		                                   
-		  		                                 
-		  		                  </div>
-		  		                  <div class="span6">	
-		  		                    <span class="time-banner">
-		  		                      <span class="image-banner">
-		  		                         <img src="<%= purchased_sale.image_0.versions[:web_index] %>">
-		  		                      </span>		
-		  		                    </span>
-		  		                    <br>
-		  											
-		  		                  </div>
-		  		                 	
-		  											
+		     <div id="shippingModal" class="modal hide" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		              <div class="modal-header">
+		                <button type="button" class="close modal-brand" data-dismiss="modal" aria-hidden="true">×</button><br>
+		                <p id="myModalLabel"></p>
+		              </div>
+		              <div class="modal-body">
+		                <div class="row-fluid">
+		                  
+		                  <div class="span2">
+		                    
+		                                    
+		                                    <br>
+		                                   
+		                                 
+		                  </div>
+		                  <div class="span6">	
+		                    <span class="time-banner">
+		                      <span class="image-banner">
+		                         <img src="">
+		                      </span>		
+		                    </span>
+		                    <br>
+											
+		                  </div>
+		                 	
+											
 
-		  		                  <div class="span4 pull-right">
-		  		                    <br>
-		  		                    <table class="table table-bordered table-striped">
-		  		                      <tr>  
-		  		                        <td>
-		  		                          <font size="1" class="muted table-modaltwo">Company</font><%= purchased_sale.sale.brand %></td>
-		  		                      </tr>
-		  		                      <tr> 
-		  		                        <td>
-		  		                          <font size="1" class="muted table-modaltwo">Product</font><%= purchased_sale.sales.product %></td>
-		  		                      </tr>
+		                  <div class="span4 pull-right">
+		                    <br>
+		                    <table class="table table-bordered table-striped">
+		                      <tr>  
+		                        <td>
+		                          <font size="1" class="muted table-modaltwo">Company</font></td>
+		                      </tr>
+		                      <tr> 
+		                        <td>
+		                          <font size="1" class="muted table-modaltwo">Product</font></td>
+		                      </tr>
 
-		  		                    </table>
-		  		                  </div>
-		  		                </div>
-		  		              </div>
-		  		              <div class="modal-footer">
-		  		                <button class="btn btn-success" data-dismiss="modal">Ok</button>
-		  		              </div>
-		  		            </div>
+		                    </table>
+		                  </div>
+		                </div>
+		              </div>
+		              <div class="modal-footer">
+		                <button class="btn btn-success" data-dismiss="modal">Ok</button>
+		              </div>
+		            </div>
 
-		  		          <% end %>  -->
+		          <% end %> 
     
     
     <br><br><br><br><br><br><br><br><br><br>
