--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -19,7 +19,10 @@ body {
         </tr>
       </thead>
       <tbody>
-      <% @purchases.each do |purchase| %>
+     		<% @purchases.each do |purchase | %>
+
+				 
+		
         <tr>
         <td>
            <!-- <a href="#shippingModal" data-toggle="modal">  -->
@@ -38,8 +41,8 @@ body {
       </tbody>
     </table>
 
-		  <% @purchased_sales.each do |purchased_sale| %>
-
+		 <% @purchases.each do |purchase | %>
+ <% purchase.purchased_sales.each do |purchased_sale| %>
 		     <div id="shippingModal" class="modal hide" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 		              <div class="modal-header">
 		                <button type="button" class="close modal-brand" data-dismiss="modal" aria-hidden="true">×</button><br>
@@ -89,7 +92,7 @@ body {
 		            </div>
 
 		          <% end %> 
-    
+    <% end %>
     
     <br><br><br><br><br><br><br><br><br><br>
 
