Adding If Statement

--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -57,7 +57,7 @@ body {
 		                                    <br>
 		                                   
 		                                 
-		                  </div>
+		                  </div><%if purchased_sale.sale %>
 		                  <div class="span6">	
 		                    <span class="time-banner">
 		                      <span class="image-banner">
@@ -65,7 +65,7 @@ body {
 		                      </span>		
 		                    </span>
 		                    <br>
-											
+											<% end %>
 		                  </div>
 		                 	
 											
